  } 
}
\section{Changes in version 1.15.2}{
  \itemize{
    \item Added number of cases and controls to assocRegression output.
  } 
}
\section{Changes in version 1.15.3}{
  \itemize{
    \item Added beta and standard error for GxE term to assocRegression output.
  } 
}
\section{Changes in version 1.15.5}{
  \itemize{
    \item Added option to read genotypes coded with nucleotides in createDataFile.
  } 
}
\section{Changes in version 1.15.7}{
  \itemize{
    \item Added option to reorder samples in vcfWrite.
  }   
}
\section{Changes in version 1.15.8}{
  \itemize{
    \item alleleFrequency includes scans with missing sex.
  }   
}
\section{Changes in version 1.15.10}{
  \itemize{
    \item createDataFile converts non-finite values to NA.
  }   
}
\section{Changes in version 1.15.11}{
  \itemize{
    \item added col argument to manhattanPlot
  }   
}
\section{Changes in version 1.15.12}{
  \itemize{
    \item allow character scanID in createDataFile
  }   
}
\section{Changes in version 1.15.13}{
  \itemize{
    \item pedigreePairwiseRelatedness identifies great grandparent/great grandchild (GGp) and grand avuncular (GAv)
  }   
}
\section{Changes in version 1.15.15}{
  \itemize{
    \item allow multiple color schemes for plots color-coded by genotype
  }   
}
\section{Changes in version 1.15.16}{
  \itemize{
    \item added permute argument to exactHWE
  }   
}
\section{Changes in version 1.17.1}{
  \itemize{
    \item changed colors for ibdPlot
  }   
}
\section{Changes in version 1.17.3}{
  \itemize{
    \item added support for hard-calling genotypes from imputed genotype probabilities in imputedDosageFile
  }   
}
\section{Changes in version 1.17.4}{
  \itemize{
    \item bug fix for coloring truncated points in manhattanPlot
  }   
}
\section{Changes in version 1.17.5}{
  \itemize{
    \item bug fix in checkImputedDosageFile if not writing a log file of missing values and an entire sample is missing from the file
  }   
}
