@@ -4,7 +4,8 @@ createAffyIntensityFile <- function(path=".",
                                     snp.annotation,
                                     scan.annotation, 
                                     precision = "single",
-                                    compress = "ZIP.max",
+                                    compress = "ZIP_RA:8M",
+                                    compress.annot = "ZIP_RA",
                                     array.name = NULL,
                                     genome.build = NULL,
                                     diagnostics.filename = "createAffyIntensityFile.diagnostics.RData",
